--- a/app/styles/sections.scss
+++ b/app/styles/sections.scss
@@ -5,6 +5,7 @@
   display: none;
   overflow: hidden;
   width: 100%;
+  position: relative;
   
   &--visible {
     display: block;
